# spine-oss

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
connectors/: README.md
connectors/screenshots/: .gitkeep
connectors/vanta/: .gitignore  README.md  package-lock.json  package.json
connectors/vanta/src/: cli.ts
connectors/vanta/src/test/: dry-run.test.ts
docs/: KEY_MANAGEMENT.md  THREAT_MODEL.md  WAL_FORMAT.md  attestation-draft.md
examples/: .gitignore  README.md  audit_report.py
examples/python/: basic_wal_async.py  fastapi_middleware.py  logging_handler.py  sidecar_nonblocking.py  wal_verify_report.py
spine-cli/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  export.rs  inspect.rs  main.rs  report.rs  verify.rs  wal_types.rs
spine-node/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
spine-node/src/: attestation.ts  canonical.ts  crypto.ts  index.ts  types.ts  verify.ts  wal.ts
spine-node/src/benchmark/: throughput.ts
spine-node/src/examples/: basic.ts
spine-node/src/test/: roundtrip.test.ts  vectors.test.ts
spine-sdk-python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_sdk.py  test_standalone.py
spine-sdk-python/examples/: basic_usage.py  circuit_breaker_demo.py  shadow_mode.py  sidecar_integration.py  standalone_demo.py
spine-sdk-python/spine_client/: __init__.py  __main__.py  circuit_breaker.py  cli.py  client.py  crypto.py  events.py  local_wal.py  sidecar.py  types.py  verify.py  wal.py
spine-sdk-python/tests/: __init__.py  test_crypto.py  test_vectors.py  test_verify.py  test_wal.py
test-vectors/: README.md  vectors.json
