[package]
name = "spine-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Eul Bite <contact@eulbite.com>"]
description = "Independent verification tools for Spine audit trails"
license = "Apache-2.0"
publish = false

[package.metadata.spine]
purpose = "Independent WAL verification without trusting the Spine server"

# ============================================================================
# BINARIES
# ============================================================================

[[bin]]
name = "spine-cli"
path = "main.rs"

# ============================================================================
# FEATURES
# ============================================================================

[features]
default = []


# ============================================================================
# DEPENDENCIES
# ============================================================================

[dependencies]
# -------- CLI --------
clap = { version = "4.5", features = ["derive"] }

# -------- Async (minimal) --------
tokio = { version = "1.41", features = ["rt", "macros"] }

# -------- Cryptography --------
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"

# -------- Serialization --------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# -------- Time --------
chrono = { version = "0.4", features = ["serde"] }

# -------- Error Handling --------
thiserror = "2.0"

# -------- Logging --------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


# ============================================================================
# DEV DEPENDENCIES
# ============================================================================

[dev-dependencies]
tempfile = "3.14"

# ============================================================================
# PROFILES
# ============================================================================

[profile.release]
opt-level = 3
lto = "thin"
strip = true