[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spine-client"
version = "0.4.0"
description = "Python SDK for Spine Enterprise Audit Logging"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Eul Bite", email = "contact@eulbite.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Security",
]
keywords = ["audit", "logging", "compliance", "DORA", "NIS2", "GDPR"]

dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "blake3>=0.3.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
spine-sdk = "spine_client.cli:main"

[project.urls]
Homepage = "https://github.com/eulbite/spine"
Documentation = "https://docs.eulbite.com/spine/sdk/python"

[tool.setuptools.packages.find]
include = ["spine_client*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
# strict = true  # TODO: Enable once all type errors are fixed
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
